# fraqtl-diagnostic

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: architecture_support.md  bug_report.md
.github/workflows/: publish.yml  test.yml
docs/: DEMO-BRIEF.md  GAMEPLAN.md  LAUNCH-COPY.md  LAUNCH-STATE.md  MATH-AGENT-HANDOFF.md
examples/: quickstart.ipynb
examples/launch_screenshots/: google_gemma-4-31B-it_fingerprint.html
examples/launch_screenshots/diagnostic-smoke/: Qwen_Qwen2.5-0.5B_fingerprint.html  Qwen_Qwen2.5-0.5B_fingerprint.json  Qwen_Qwen2.5-3B-Instruct_fingerprint.html  Qwen_Qwen2.5-3B-Instruct_fingerprint.json  Qwen_Qwen2.5-3B_fingerprint.html  Qwen_Qwen2.5-3B_fingerprint.json  Qwen_Qwen3-8B_fingerprint.html  Qwen_Qwen3-8B_fingerprint.json  meta-llama_Llama-3.2-1B-Instruct_fingerprint.html  mistralai_Mistral-7B-v0.1_fingerprint.html  mistralai_Mistral-7B-v0.1_fingerprint.json
examples/smoke_output/diagnostic-smoke/: meta-llama_Llama-3.2-1B-Instruct_fingerprint.json
fraqtl_diagnostic/: __init__.py  _model_io.py  api.py  cli.py  compare.py  depth_law.py  estimator.py  grader.py  report.py  shannon.py  spectrum.py
fraqtl_diagnostic/references/: __init__.py  stock_models_v1.json
hf_space/: README.md  app.py  requirements.txt
tests/: modal_gemma4.py  modal_try.py  modal_wheel_test.py  test_compare.py  test_math_modules.py
