[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraqtl-diagnostic"
version = "0.1.3"
description = "Fingerprint any transformer's compression potential in 30 minutes."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.14"
authors = [
  { name = "fraQtl", email = "hello@fraqtl.ai" },
]
keywords = ["transformer", "compression", "quantization", "shannon", "diagnostic"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.30",
  "datasets>=2.14",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]

[project.urls]
Homepage = "https://fraqtl.ai"
Documentation = "https://github.com/fraqtl-ai/fraqtl-diagnostic"
Source = "https://github.com/fraqtl-ai/fraqtl-diagnostic"

[project.scripts]
fraqtl = "fraqtl_diagnostic.cli:main"

[tool.setuptools.packages.find]
include = ["fraqtl_diagnostic*"]

[tool.setuptools.package-data]
"fraqtl_diagnostic.references" = ["*.json"]
